scripts/nullaway/wpi/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8.txt
../wpi/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/RectangularTopology.java:15: error: [NullAway] parameter position is @NonNull, but parameter in superclass method ru.spbau.talanov.sd.drunkard.BoardTopology.getAdjacentPositions(@org.checkerframework.checker.initialization.qual.Initialized,@org.checkerframework.checker.nullness.qual.Nullable ru.spbau.talanov.sd.drunkard.Position) is @Nullable
    public @org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull List<Position> getAdjacentPositions(@org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull RectangularTopology this, @org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull Position position) {
                                                                                                                                                                                                                                                                                                                                                                                                                                        ^
    (see http://t.uber.com/nullaway )
../wpi/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/HexagonalTopology.java:15: error: [NullAway] parameter position is @NonNull, but parameter in superclass method ru.spbau.talanov.sd.drunkard.BoardTopology.getAdjacentPositions(@org.checkerframework.checker.initialization.qual.Initialized,@org.checkerframework.checker.nullness.qual.Nullable ru.spbau.talanov.sd.drunkard.Position) is @Nullable
    public @org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull List<Position> getAdjacentPositions(@org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull HexagonalTopology this, @org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull Position position) {
                                                                                                                                                                                                                                                                                                                                                                                                                                      ^
    (see http://t.uber.com/nullaway )
2 errors
